# battery-optimizer-light-plus

./: .gitignore  GEMINI.md  README.md  hacs.json  history_11.json  history_12.json  manifest.json  pyproject.toml  release.py  requirements.txt
.github/workflows/: validate_json.yml
battery_optimizer_light.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
custom_components/battery_optimizer_light/: battery_factory.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/battery_optimizer_light/batteries/huawei/: __init__.py  huawei.py
custom_components/battery_optimizer_light_base/: __init__.py  config_flow.py  const.py  manifest.json  services.yaml
custom_components/battery_optimizer_light_base/translations/: sv.json
custom_components/battery_optimizer_light_plus/: __init__.py  battery_factory.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  switch.py
custom_components/battery_optimizer_light_plus/batteries/: __init__.py  base.py  generic.py
custom_components/battery_optimizer_light_plus/batteries/homevolt/: __init__.py  homevolt.py
custom_components/battery_optimizer_light_plus/batteries/huawei/: huawei.py
custom_components/battery_optimizer_light_plus/batteries/sonnen/: __init__.py  api.py  sonnen.py
custom_components/battery_optimizer_light_plus/translations/: en.json  sv.json
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_core.py  test_homevolt.py  test_huawei.py  test_sensor.py  test_sonnen.py  test_switch.py
