[project]
name = "battery-optimizer-light"
version = "0.1.0"
dependencies = [
    "aiohttp",
    "voluptuous",
    "async_timeout"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Ignorera import-placering i tester (eftersom vi mockar sys.modules)
"tests/test_core.py" = ["E402"]
"custom_components/battery_optimizer_light_plus/config_flow.py" = ["E501"]
